04-jenkins-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - jenkins.k8s.rsletten.com
    secretName: jenkins-cert
