04-jenkins-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.k8s.rsletten.com`)
      kind: Rule
      services:
        - name: jenkins
          port: 80
